[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Train.tscn" type="PackedScene" id=2]
[ext_resource path="res://ScrollingBackground.gd" type="Script" id=3]
[ext_resource path="res://Art/Tracky.png" type="Texture" id=4]
[ext_resource path="res://Boulder.tscn" type="PackedScene" id=5]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -312.715 ],
"_edit_vertical_guides_": [  ]
}
rock_scene = ExtResource( 5 )

[node name="Train" parent="." instance=ExtResource( 2 )]
position = Vector2( 234.833, 269.446 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1013, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1.02307, 257.83 )
scale = Vector2( 0.288844, 0.288844 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( -35.5962, 0, 3551.05, 170 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1.023, 107.83 )
scale = Vector2( 0.288844, 0.288844 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( -35.5962, 0, 3551.05, 170 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1.023, 407.83 )
scale = Vector2( 0.288844, 0.288844 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( -35.5962, 0, 3551.05, 170 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="RockTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Coin" parent="." instance=ExtResource( 6 )]
position = Vector2( 642.058, 280.316 )
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="RockTimer" to="." method="_on_RockTimer_timeout"]
[connection signal="collect_signal" from="Coin" to="." method="_on_Coin_collect_signal"]
